# westernpower-smartmeter

./: .gitignore  Boosted_Tree_Models.ipynb  DataPrep.ipynb  Dockerfile  Keras Model.ipynb  KerasModel2.ipynb  README.md  Tpot-model.ipynb  environment.yml  hello.py  keras_multi_input.py  keras_multiinput.ipynb  lstm_cnn.ipynb  lstm_cnn.py  new-fastai-acron-prediction.ipynb  process-data.R  pyproject.toml  xgboost-tpot-anlsysis.py
client/: client.py  client_ui.py
inference_server/: server.py
inference_server/inference/: __init__.py
