[project]
name = "westernpower-smartmeter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feather-format>=0.4.1",
    "ipykernel>=6.29.5",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
    "scikit-learn>=1.5.1",
    "sklearn-pandas>=2.2.0",
    "tensorflow>=2.17.0",
    "tpot>=0.12.2",
]
